Fixed align of copyright

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -72,25 +72,10 @@ footer {
 		font-size: .8em;
 		margin: 0 auto;
 		color: #fff;
-
-		@media #{$tablet} {
-			text-align: center;
-		}
-
+		text-align: center;
 	}
 
 	a {
 		color: #fff;
-	}
-
-	.legal-line {
-		width: 100%;
-		padding: 30px 0;
-		margin: 0;
-		background-color: #222527;
-
-		a {
-			font-weight: 600;
-		}
 	}
 }
